--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
-    "log4js": "^6.3.0"
+    "graphql-tag": "^2.11.0",
+    "log4js": "^6.3.0",
+    "mongodb": "^3.6.0",
+    "mongoose": "^5.9.29"
   }
 }
