--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
+    "graphql-tools": "^6.0.18",
+    "lodash": "^4.17.20",
     "log4js": "^6.3.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.29"
