--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.16.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
@@ -19,6 +20,7 @@
     "lodash": "^4.17.20",
     "log4js": "^6.3.0",
     "mongodb": "^3.6.0",
-    "mongoose": "^5.9.29"
+    "mongoose": "^5.9.29",
+    "redis": "^3.0.2"
   }
 }
