--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "graphql-tools": "^6.0.18",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "log4js": "^6.3.0",
     "mongodb": "^3.6.0",
